# RudeStorm

./: .gitignore  README.md  __init__.py  config.py  demo.py  events.py  fusion.py  governance.py  identity.py  learning.py  pipeline.py  pyproject.toml  synthetic.py
adapters/: __init__.py  acoustic.py  base.py  csi_presence.py  remote_id.py
cogs/: __init__.py  base.py  catalog.py  nodes.py  registry.py  vitals.py
docs/: ESP32_WIFI_SENSING.md  HOW_THE_AI_LEARNS.md
firmware/lib/rudestorm_core/: rs_json.c  rs_json.h  rs_provenance.c  rs_provenance.h  rs_sha256.c  rs_sha256.h
firmware/test/: conformance_main.c
references/: CSI_ENVELOPE.md
tests/: test_adapters.py  test_cogs.py  test_firmware_conformance.py  test_fusion.py  test_governance.py  test_identity.py  test_pipeline.py  test_ui.py  test_web.py
ui/: __init__.py  model.py  render.py  theme.py  waveshare.py  web.py
