[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rudestorm"
version = "0.1.0"
description = "Passive urban sensing fusion middleware (WiFi-CSI + passive Remote ID + acoustic)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
rudestorm-demo = "rudestorm.demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rudestorm*"]

[tool.pytest.ini_options]
testpaths = ["rudestorm/tests"]
